--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/creep_score.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/creep_score.css
@@ -39,7 +39,7 @@
     text-align: left;
     /*background-color: #ff0000;*/
     horizontal-align: right;
-    vertical-align: center;\
+    vertical-align: center;
 
     animation-duration: TotalLength;
     animation-timing-function: TimingFunc;
