--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -6,7 +6,7 @@
 
 .EndScreenPanel
 {
-  visibility: visible;
+  visibility: collapse;
   vertical-align: middle;
   horizontal-align: center;
   padding: 4px;
@@ -271,39 +271,4 @@
 .Category .OptionButton:selected
 {
   background-color: gradient( linear, 0% 0%, 0% 100%, from( #777777 ), to( #999999 ) );
-}
-
-#DimBackgound.Hidden
-{
-  opacity: 0.0;
-}
-
-#DimBackground
-{
-  width: 100%;
-  height: 100%;
-  background-color: #060606;
-  opacity: 0.94;
-
-  transition-property: opacity;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in;
-  transition-delay: 0s;
-}
-
-#BlurBackground
-{
-  width: 100%;
-  height: 100%;
-  background-color: #00000055;
-  opacity: 1.0;
-
-  transition-property: background-color;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in-out;
-}
-
-#BlurBackground.Hidden
-{
-  opacity: 0.0;
 }
