--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/endscreen.css
@@ -7,15 +7,13 @@
 .EndScreenPanel
 {
   visibility: collapse;
-  vertical-align: middle;
+  vertical-align: bottom;
   horizontal-align: center;
-  padding: 4px;
-  padding-left: 0px;
-  flow-children: right;
 
-  transition-property: background-color, transform;
-  transition-duration: 0.35s;
-  transition-timing-function: ease-in-out;
+  width: 100%;
+  height: 96%;
+  background-color: #06060699;
+  //flow-children: right;
 }
 
 .EndScreenPanel.Maximized
@@ -25,6 +23,8 @@
 
 .EndScreenPanelContainer
 {
+    vertical-align: center;
+    horizontal-align: middle;
     flow-children: down;
     width: 1440px;
     height: 800px;
