--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/options.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/options.css
@@ -12,6 +12,7 @@
     padding: 4px;
     padding-left: 0px;
     flow-children: right;
+    visibility: collapse;
 
     transition-property: background-color, transform;
 	transition-duration: 0.35s;
