--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/stats.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/stats.css
@@ -316,6 +316,7 @@
 
 #DimBackground
 {
+	margin-top: 50px;
 	vertical-align: center;
 	horizontal-align: middle;
 	width: 1440px;
@@ -331,6 +332,7 @@
 
 #BlurBackground
 {
+	margin-top: 50px;
 	vertical-align: center;
 	horizontal-align: middle;
 	width: 1440px;
