--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/timescreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/timescreen.css
@@ -1,14 +1,14 @@
-@define TotalLength: 3.0s;
+@define TotalLength: 1.0s;
 @define TimingFunc: linear;
 @define IterationCount: infinite;
 
-.PickScreenRoot
+.TimeScreenRoot
 {
     width: 100%;
     height: 100%;
 }
 
-.PickScreenPanel{
+.TimeScreenPanel{
     width: 100%;
     height: 96%;
     background-size: 100% 100%;
@@ -19,12 +19,12 @@
     flow-children: down;
 }
 
-.PickScreenPanel.Minimized
+.TimeScreenPanel.Minimized
 {
     visibility: collapse;
 }
 
-.PickScreenPanel Label{
+.TimeScreenPanel Label{
     margin-top: 20px;
     margin-bottom: 20px;
     horizontal-align: center;
@@ -32,35 +32,45 @@
     font-size: 50;
     font-weight: bold;
     color: #444444;
-}
 
-.HeroPanelContainer{
-    flow-children: right;
-    height: 100%;
-}
-
-.HeroPanel{
-    width: fill-parent-flow(1.0);
-    height: 100%;
-}
-
-.HeroPanel Label{
-    vertical-align: bottom;
-    color: #a0a0a0;
-    font-weight: thin;
-    font-size: 50;
-
-    animation-duration: 1.0s;
+    animation-duration: TotalLength;
     animation-timing-function: TimingFunc;
     animation-iteration-count: IterationCount;
 }
 
-.HeroPanel .PickButton{
+.TimePanelContainer{
+    flow-children: right;
+    height: 100%;
+}
+
+.TimePanel{
+    width: fill-parent-flow(1.0);
+    height: 100%;
+}
+
+.TimePanel .Column{
+  background-color: gradient( linear, 0% 100%, 0% 0%, from( #333333), to( #44444400) );
+  height: fill-parent-flow(1.0);
+}
+
+.TimePanel Label{
+    text-align: center;
     vertical-align: bottom;
+    color: #a0a0a0;
+    font-weight: thin;
+    font-size: 90;
+    
+    width: fill-parent-flow(1.0);
+    margin-top: 0px;
+    margin-bottom: 60px;
+}
+
+.TimePanel .PickButton{
+    vertical-align: center;
     horizontal-align: center;
 }
 
-.HeroPanel .VertBar{
+.TimePanel .VertBar{
     horizontal-align: center;
     width: 20%;
     height: 100%;
@@ -73,49 +83,6 @@
   height: 100%;
   background-color: white;
   opacity: 0.04;
-  margin-bottom: 50px;
-}
-
-#satyr_img
-{   
-    width: 600px;
-    height: 600px;
-    margin-bottom: 3px;
-    background-image: url("file://{images}/n_creep_satyr_b.png");
-    background-position: 50% 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    horizontal-align: center;
-    vertical-align: middle;
-
-    animation-name: close;
-    animation-duration: TotalLength;
-    animation-timing-function: TimingFunc;
-    animation-iteration-count: IterationCount;
-}
-
-#nevermore_img
-{   
-    width: 700px;
-    height: 700px;
-    margin-bottom: 3px;
-    background-image: url("file://{images}/shadow_fiend.png");
-    background-position: 50% 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    horizontal-align: center;
-    vertical-align: middle;
-
-    animation-name: close;
-    animation-duration: TotalLength;
-    animation-timing-function: TimingFunc;
-    animation-iteration-count: IterationCount;
-}
-
-.HeroPanel .Column{
-  background-color: gradient( linear, 0% 100%, 0% 0%, from( #333333), to( #44444400) );
-  height: fill-parent-flow(1.0);
-  width: 600px;
 }
 
 .PickButton
@@ -127,20 +94,15 @@
 
 .PickButton:hover
 {
-    background-color: gradient( linear, 0% 0%, 0% 100%, from( #444444 ), to( #555555 ) );
+    background-color: gradient( linear, 0% 0%, 0% 100%, from( #555555 ), to( #444444 ) );
 }
 
-.HeroPanel .PickButton:hover .Column Label
+.PickButton:hover Label
 {
   visibility: visible;
   animation-name: bounce;
 }
 
-@keyframes 'close'{
-    0% { transform:  scaleX(1.0) scaleY(1.0);}
-    50% { transform:  scaleX(1.05) scaleY(1.05);}
-    100% { transform:  scaleX(1.0) scaleY(1.0);}
-}
 
 @keyframes 'bounce' {
   0% {animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); transform: translateY(0);}
