--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
@@ -13,9 +13,11 @@
     height: 96%;
     background-size: 100% 100%;
     vertical-align: bottom;
-    horizontal-align: left;
+    horizontal-align: center;
     visibility: visible;
-    background-color: #000000;
+    background-image: url("file://{images}/bg.jpg");
+    background-position: 0% 0%;
+    background-repeat: no-repeat;
     flow-children: down;
 }
 
@@ -24,14 +26,22 @@
     visibility: collapse;
 }
 
-.PickScreenPanel Label{
-    margin-top: 20px;
+.VertBar
+{
+  width: 1px;
+  height: 100%;
+  background-color: white;
+  opacity: 0.04;
+}
+
+Label{
+    margin-top: 40px;
     margin-bottom: 20px;
     horizontal-align: center;
     text-transform: uppercase;
     font-size: 50;
     font-weight: bold;
-    color: #444444;
+    color: #a0a0a0;
 }
 
 .HeroPanelContainer{
@@ -58,22 +68,6 @@
 .HeroPanel .PickButton{
     vertical-align: bottom;
     horizontal-align: center;
-}
-
-.HeroPanel .VertBar{
-    horizontal-align: center;
-    width: 20%;
-    height: 100%;
-    background-color: gradient( linear, 0% 100%, 0% 0%, from( #ffffff), to( #44444400) );
-}
-
-.VertBar
-{
-  width: 1px;
-  height: 100%;
-  background-color: white;
-  opacity: 0.04;
-  margin-bottom: 50px;
 }
 
 #satyr_img
@@ -113,9 +107,9 @@
 }
 
 .HeroPanel .Column{
-  background-color: gradient( linear, 0% 100%, 0% 0%, from( #333333), to( #44444400) );
+  background-color: gradient( linear, 0% 0%, 0% 100%, from( #333333), to( #44444400) );
   height: fill-parent-flow(1.0);
-  width: 600px;
+  width: fill-parent-flow(1.0);
 }
 
 .PickButton
@@ -127,7 +121,7 @@
 
 .PickButton:hover
 {
-    background-color: gradient( linear, 0% 0%, 0% 100%, from( #444444 ), to( #555555 ) );
+    background-color: gradient( linear, 0% 0%, 0% 100%, from( #555555 ), to( #44444400 ) );
 }
 
 .HeroPanel .PickButton:hover .Column Label
