--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/pickscreen.css
@@ -1,4 +1,4 @@
-@define TotalLength: 3.0s;
+@define TotalLength: 1.0s;
 @define TimingFunc: linear;
 @define IterationCount: infinite;
 
@@ -26,6 +26,55 @@
     visibility: collapse;
 }
 
+.PickScreenPanel Label{
+    width: 100%;
+    horizontal-align: center;
+    background-color: black;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 80;
+    opacity: 0.9;
+    color: #a0a0a0;
+
+    animation-duration: TotalLength;
+    animation-timing-function: TimingFunc;
+    animation-iteration-count: IterationCount;
+}
+
+.PickPanelContainer{
+    flow-children: right;
+    height: 100%;
+}
+
+.PickPanel{
+    width: fill-parent-flow(1.0);
+    height: 100%;
+}
+
+.PickPanel .Column{
+  background-color: gradient( linear, 0% 0%, 0% 100%, from( #111111), to( #11111166 ) );
+  height: fill-parent-flow(1.0);
+}
+
+.PickPanel Label{
+  text-align: center;
+  vertical-align: bottom;
+  color: #a0a0a0;
+  font-weight: thin;
+  font-size: 50;
+  background-color: black;
+  opacity: 0.5;
+  
+  width: fill-parent-flow(1.0);
+  margin-top: 0px;
+  margin-bottom: 60px;
+}
+
+.PickPanel .PickButton{
+    vertical-align: center;
+    horizontal-align: center;
+}
+
 .VertBar
 {
   width: 1px;
@@ -34,70 +83,24 @@
   opacity: 0.04;
 }
 
-Label{
-    margin-top: 40px;
-    margin-bottom: 20px;
-    horizontal-align: center;
-    text-transform: uppercase;
-    font-size: 50;
-    font-weight: bold;
-    color: #a0a0a0;
-}
-
-.HeroPanelContainer{
-    width: 50%;
-    horizontal-align: center;
-    flow-children: right;
-    height: 100%;
-}
-
-.HeroPanel{
-    width: fill-parent-flow(1.0);
-    height: 100%;
-}
-
-.HeroPanel Label{
-    vertical-align: bottom;
-    color: #a0a0a0;
-    font-weight: thin;
-    font-size: 50;
-
-    animation-duration: 1.0s;
-    animation-timing-function: TimingFunc;
-    animation-iteration-count: IterationCount;
-}
-
-.HeroPanel .PickButton{
-    vertical-align: bottom;
-    horizontal-align: center;
-}
-
-#satyr_img
+.SatyrBg
 {   
     width: 100%;
     height: 100%;
-    //background-image: url("file://{images}/n_creep_satyr_b.png");
     background-image: url("file://{images}/satyr_bg.jpg");
     background-position: 0% 0%;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-#nevermore_img
+.ShadowFiendBg
 {   
     width: 100%;
     height: 100%;
-    //background-image: url("file://{images}/shadow_fiend.png");
     background-image: url("file://{images}/shadowfiend_bg.jpg");
     background-position: 0% 0%;
     background-size: contain;
     background-repeat: no-repeat;
-}
-
-.HeroPanel .Column{
-  background-color: gradient( linear, 0% 100%, 0% 0%, from( #111111), to( #11111166 ) );
-  height: fill-parent-flow(1.0);
-  width: fill-parent-flow(1.0);
 }
 
 .PickButton
@@ -114,21 +117,16 @@ Label{
 
 .PickButton:active
 {
-  background-color: #4A4A4A;
+  background-color: #4A4A4A99;
   pre-transform-scale2d: 1.02;
 }
 
-.HeroPanel .PickButton:hover .Column Label
+.PickButton:hover Label
 {
   visibility: visible;
   animation-name: bounce;
 }
 
-@keyframes 'close'{
-    0% { transform:  scaleX(1.0) scaleY(1.0);}
-    50% { transform:  scaleX(1.05) scaleY(1.05);}
-    100% { transform:  scaleX(1.0) scaleY(1.0);}
-}
 
 @keyframes 'bounce' {
   0% {animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000); transform: translateY(0);}
