Fix select duration title not being the same color as select hero title

--- a/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/timescreen.css
+++ b/content/dota_addons/lasthitchallenge/panorama/styles/custom_game/timescreen.css
@@ -34,7 +34,7 @@
     text-transform: uppercase;
     font-size: 80;
     opacity: 0.9;
-    color: #444444;
+    color: #a0a0a0;
 
     animation-duration: TotalLength;
     animation-timing-function: TimingFunc;
